Fix z-index property for header

--- a/styles/css/list.css
+++ b/styles/css/list.css
@@ -26,6 +26,7 @@ main {
     align-items: center;
     flex-direction: column;
     gap: 1vh;
+    z-index: 2;
 }
 
 
